@@ -3,6 +3,10 @@
 
 *** Changes since GDB 7.12
 
+* Support for fast tracepoints on arm-linux was added in GDBserver,
+  including JIT compiling fast tracepoint's conditional expression
+  bytecode into native code.
+
 * Support for tracepoints on arm-linux was added in GDBServer.
 
 * Building GDB and GDBserver now requires a C++11 compiler.
